// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityIndicator renders active with custom percentage 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-1mntgth-ActivityIndicator"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders active with default percentage 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-1mntgth-ActivityIndicator"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders default props 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with color beta 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="beta"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with color black 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="black"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with color blue 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="blue"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with color chartGreen 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="chartGreen"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with color chartNegativeRed 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="chartNegativeRed"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with custom size 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 100px; width: 100px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with inlined color 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#ff0000"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with inlined trailColor 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#ff0000"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with percentage 75 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    aria-valuetext="75%"
    class="cache-1mntgth-ActivityIndicator"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="65.97344572538566"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with strokeWidth 25 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="37.5"
      stroke="#D4DAE7"
      stroke-width="25"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="37.5"
      stroke="#4F0599"
      stroke-dasharray="235.61944901923448"
      stroke-dashoffset="188.4955592153876"
      stroke-linecap="round"
      stroke-width="25"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with text 100% 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-10lyaht {
  fill: #4F0599;
  font-size: 26px;
  dominant-baseline: middle;
  text-anchor: middle;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#D4DAE7"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
    <text
      class="cache-10lyaht e7dhm9i0"
      x="50"
      y="50"
    >
      100%
    </text>
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with trailColor beta 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="beta"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with trailColor black 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="black"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with trailColor blue 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="blue"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with trailColor chartGreen 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="chartGreen"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;

exports[`ActivityIndicator renders with trailColor chartNegativeRed 1`] = `
<DocumentFragment>
  .cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<svg
    aria-label="Loading test"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    aria-valuetext="20%"
    class="cache-0"
    role="progressbar"
    style="height: 40px; width: 40px;"
    viewBox="0 0 100 100"
  >
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="chartNegativeRed"
      stroke-width="16"
    />
    <circle
      class="cache-wxrv4d-ActivityIndicator"
      cx="50"
      cy="50"
      fill="none"
      r="42"
      stroke="#4F0599"
      stroke-dasharray="263.89378290154264"
      stroke-dashoffset="211.11502632123413"
      stroke-linecap="round"
      stroke-width="16"
    />
  </svg>
</DocumentFragment>
`;
